# VMLang

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
programs/: a.vm  b.vm  echo.vm  fibProg.vm
src/frontend/: main.cpp
src/frontend/iommio/: iommio.cpp  iommio.hpp
src/lib/: emulator.cpp  emulator.hpp  vm.cpp  vm.hpp
src/lib/compiler/: compiler.cpp  compiler.hpp
src/lib/compiler/inlineassembler/: compiler.cpp
src/lib/compiler/lexer/: lexer.cpp  lexer.hpp
src/lib/compiler/programAssembler/: prgmAssembler.cpp  prgmAssembler.hpp
src/lib/errors/: errors.cpp  errors.hpp
src/lib/memory/: memory.cpp  memory.hpp
src/lib/stack/: stack.cpp  stack.hpp
src/lib/variable/: variable.cpp  variable.hpp
src/lib/vm/: vm.cpp  vm.hpp
src/lib/vm/instruction/: instruction.cpp  instruction.hpp
src/lib/vm/memory/: memory.cpp  memory.hpp
src/lib/vm/memory/mmio/: mmio.hpp
src/lib/vm/registers/: registers.cpp  registers.hpp
src/lib/vm/stack/: stack.cpp  stack.hpp
src/lib/vm/value/: value.cpp  value.hpp
src/test/: fibtest.cpp  stacktest.cpp
src/test/programfiles/: fib.vm  stack.vm
src/test/testfiles/: fib.vm  stack.vm
src/test/testingmmio/: testingmmio.cpp  testingmmio.hpp
